--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,4 +1,4 @@
-name: JS Actions
+me: JS Actions
 
 on:
   issues:
@@ -11,3 +11,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: ha-ha
+        uses: ./.github/actions/joke-action
